refactor: en ko switch resume 템플릿에 넣기

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -129,6 +129,10 @@
     </style>
   </head>
   <body>
+    <div class="lang-switch">
+      <a href="/" class="lang-btn {% if page.url == '/' or page.url contains '/index.html' %}selected{% endif %}">한국어</a>
+      <a href="/en/" class="lang-btn {% if page.url contains '/en/' %}selected{% endif %}">English</a>
+    </div>
     {{ content }}
   </body>
 </html>
