--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -40,9 +40,6 @@
         border-top: 2px solid #ddd;
         margin: 16px 0;
       }
-      .content {
-        width: 100%;
-      }
       section h2 {
         font-size: 18px;
         margin-bottom: 12px;
@@ -76,6 +73,16 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+      }
+      .skills-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 20px;
+      }
+      .skill-item {
+        padding: 15px;
+        border: 1px solid #eee;
+        border-radius: 8px;
       }
       .projects-wrapper {
         display: flex;
@@ -204,7 +211,7 @@
     </style>
   </head>
   <body>
-    <div class="lang-switch">
+    <!-- <div class="lang-switch">
       <a
         href="/"
         class="lang-btn {% if page.url == '/' or page.url contains '/index.html' %}selected{% endif %}"
@@ -215,7 +222,7 @@
         class="lang-btn {% if page.url contains '/en/' %}selected{% endif %}"
         >English</a
       >
-    </div>
+    </div> -->
 
     {{ content }} {% if page.url == '/' %}
     <div class="section-map" id="section-map">
